--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
-    <title>YOUR NAME</title>
+    <title>My Portfolio</title>
+    <style>
+      Body { 
+      Background: crimson;
+      padding: 100px;
+      }
+      </style>
   </head>
-  <body class="index">
+  <body class="index" 
     <div id="main" role="main">
-      <h1>Your Name</h1>
+      <h1 style="color: pink;">Grayson Kansala</h1>
       <p>One sentence about what this is.</p>
     </div>
   </body>
