--- a/index.html
+++ b/index.html
@@ -2,19 +2,64 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
-    <title>My Portfolio</title>
+    <title>Grayson's Portfolio</title>
+
     <style>
       Body { 
-      Background: crimson;
-      padding: 100px;
+      Background: #b6c4c4;
+      font-family: verdana;
+      padding: 150px;
+      font-size: 100%;
+      border: 20px solid rgb(255, 102, 0);
+        }
+      p {
+        border:25px solid
+        margin:100x;
+        font-family:Georgia;
       }
-      </style>
-  </head>
-  <body class="index" 
-    <div id="main" role="main">
-      <h1 style="color: pink;">Grayson Kansala</h1>
-      <p>One sentence about what this is.</p>
+      h1 {
+        color: 
+        font-family: verdana;
+        font-size: 100px
+      }
+    </style>
+    <body>
+        <center>
+        <h1> Grayson Kansala</h1>
+        <br>
+        <h2> Oregon State-Cascades </h2>
+        <Br>
+        <table> 
+            <thead> 
+              <tr>
+                <tH><button>Home</tH>
+                <th><button>About Me</th>
+                <th><button>My Portfolio</th>
+                <Th><button>Resume</Th>
+                <th><button>Contact Information</th>
+              </tr>
+            </thead>
+              </table>
+              <br>
+              <a href="2.jpg">
+              <img src="2.jpg" alt= "Mexico" style= "width:450px;Height:500px;">
+              </a>
+              <center>
+            </div>
+       </head>
+       <footer>
+         <p4>My girlfriend and I in Mexico last summer.</p4>
+       </footer>
+     <body class="index">
+     <div id="main" role="main">
+      <p id="first"><strong>Welcome to my webpage.</strong></p>
+      <Br>
+      <p id="second"><strong>About me section will be here on home page, until I learn how to use my buttons located at the top of the screen.</strong> Hello, my name is Grayson Kansala and I am currently a sophmore at OSU-Cascades, pursuing a degree in computer science. I grew up in the small town of Sandy Oregon, which is approximatley two and a half hours away from Bend. Back home I have two dogs, their names are Charlie and Finn. In my free time, I enjoy playing sports, such as basketball, tennis, football, and golf.  
+      </p> 
+   
     </div>
   </body>
+
 </html>
