--- a/jQuery.html
+++ b/jQuery.html
@@ -12,8 +12,8 @@
       <div id="fade" id="top">
         <h1 id="mainHeader">Stephen Cook</h1>
       </div>
-      <div id="middle">
-        <h2>Who was he?</h2>
+      <div id="gone" id="middle">
+        <h2><button>"Who was he?"</button></h2>
       </div>
       <div id="bottom">
         <div id="bottomLeft">
