--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Navigation Bar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -35,19 +35,7 @@
           <li class="nav-item">
             <a class="nav-link disabled" href="https://gkansala13.github.io/Zagster.client/">Data Visualization Project</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
       </div>
     </nav>
 
@@ -75,7 +63,7 @@
           <div class="col-md-4">
             <h2>About Me</h2>
             <p>Hello, my name is Grayson Kansala and I grew up in the small town of Sandy Oregon, which is approximatley two and a half hours away from Bend. Back home, I have two dogs and their names are Charlie and Finn. In my free time, I enjoy playing sports, such as basketball, tennis, football, and golf. Since moving to Bend, I have now found a new hobby of hiking and exploring this beautiful town.  </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="https://www.facebook.com/grkansala" role="button">Learn More &raquo;</a></p>
           </div>
           <img src="3.jpg" alt= "Mexico" style= "width:325px;Height:225px;"
     
@@ -153,7 +141,7 @@
       
       <footer>
       Contact Info 
-      <br>Email:Grayson.kansala13@gmail.com 
+      <br><a href=""></a>Email:Grayson.kansala13@gmail.com 
       <br>
       Phone Number:(971)-269-6177</footer>
       <br>
