--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
            
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Resume pdf.pdf">My Resume</a>
+            <a class="nav-link" href="Grayson Kansala Proto-Resume.docx.pdf">My Resume</a>
             <li class="nav-item">
               <a class="nav-link" href="https://github.com/Gkansala13">My Github</a>
               <li class="nav-item">
