fixed title name

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">Navigation Bar</a>
+      <a class="Navigation Bar" href="#">Navigation Bar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -47,7 +47,7 @@
       <div class="jumbotron">
         <div class="container">
           <center>
-          <h1 class="display-3">Welcome To My Portfolio</h1>
+          <h1 class="display-3">Grayson Kansala's Portfolio</h1>
           <p></p>
         </div>
       </div>
@@ -126,7 +126,7 @@
         <center>
             <h1>Grayson Kansala</h1>
             <br>
-        <h2 onclick="this.style.color='orange';">Oregon State-Casacdes</h2>
+        <h2 onclick="this.style.color ; 'orange';">Oregon State-Casacdes</h2>
         <Br>
           <br>
               
@@ -154,7 +154,7 @@
       <br>
       Phone Number:(971)-269-6177</footer>
       <br>
-      <p>&copy;2018-2019 
+      <p>&copy;2021-2022 
 
       </p>
     </div>
